# I.P.P.O.L.I.T.

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: ros2_ci.yml
cloud/voice-worker/: README.md  wrangler.jsonc
cloud/voice-worker/src/: index.ts
docs/: audio.md  companion-autonomy.md  device-test-checklist.md  fable5-review.md  foxglove-layout.json  hardware.md  navigation-architecture.md  q6a-camera-pipeline.md  q6a-camera.md  q6a-companion.md  q6a-llm-toolchain.md  q6a-pipeline-improvement-plan.md  q6a-pipeline-review-brief.md  q6a-pipeline-review-findings.md  q6a-qairt-2.46-migration.md  ros.md  sensors.md  usb-gadget.md  voice-cloud.md
kernel/: config-4.9.191.txt
kernel/modules/: SHA256SUMS  u_ether.ko  usb_f_ecm.ko  usb_f_ncm.ko
robot/config/ava/: clean_parameter.json  iot.flag  iot_conf.json
robot/config/miio/: wifi.conf
ros2_ws/src/ippolit_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/ippolit_bringup/config/: README.md  cliff_guard.yaml  cmd_vel_bridge.yaml  diagnostic_aggregator.yaml  ekf.yaml  nav2.yaml  q6a_announce.yaml  q6a_laser_odom.yaml  q6a_map_persist.yaml  q6a_objmap.yaml  q6a_vision.yaml  twist_mux.yaml
ros2_ws/src/ippolit_bringup/launch/: core.launch.xml  drivers.launch.xml  localization.launch.xml  navigation.launch.xml  perception.launch.xml  robot.launch.xml  safety_control.launch.xml  viz.launch.xml
ros2_ws/src/ippolit_bringup/scripts/: deploy.sh
ros2_ws/src/ippolit_bringup/systemd/: ippolit-core.service  ippolit-nav.service  ippolit-perception.service  ippolit-viz.service
ros2_ws/src/ippolit_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/ippolit_control/ippolit_control/: cmd_vel_bridge.py
ros2_ws/src/ippolit_control/test/: test_cmd_vel_mapping.py
ros2_ws/src/ippolit_description/: CMakeLists.txt  package.xml
ros2_ws/src/ippolit_description/launch/: description.launch.xml
ros2_ws/src/ippolit_description/urdf/: ippolit.urdf.xacro
ros2_ws/src/ippolit_drivers/: package.xml  setup.cfg  setup.py
ros2_ws/src/ippolit_drivers/ippolit_drivers/: audio_bridge.py  lds_decode.py  lds_scan_node.py  mcu_node.py  valetudo_bridge.py
ros2_ws/src/ippolit_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/ippolit_interfaces/msg/: FloorDrop.msg  MappedObject.msg  MappedObjectArray.msg  McuTriggers.msg
ros2_ws/src/ippolit_localization/: package.xml  setup.cfg  setup.py
ros2_ws/src/ippolit_localization/ippolit_localization/: q6a_laser_odom.py  q6a_map_persist.py
ros2_ws/src/ippolit_localization/test/: test_map_persist_resume_guard.py
ros2_ws/src/ippolit_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/ippolit_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/ippolit_perception/ippolit_perception/: q6a_announce.py  q6a_bytetrack.py  q6a_objmap.py  q6a_vision.py  q6a_yolo.py
ros2_ws/src/ippolit_perception/test/: test_objmap_merge.py  test_yaw_from_quaternion.py
ros2_ws/src/ippolit_safety/: package.xml  setup.cfg  setup.py
ros2_ws/src/ippolit_safety/ippolit_safety/: cliff_guard.py
ros2_ws/src/ippolit_teleop/: package.xml  setup.cfg  setup.py
scripts/: ask.sh
scripts/companion/: audio_bridge.py  cliff_guard.py  drive_sense.sh  install_ros2.sh  q6a_announce.py  q6a_brownout.py  q6a_creep_test.py  q6a_drive.py  q6a_edge_follow.py  q6a_laser_odom.py  q6a_llmd.py  q6a_map_persist.py  q6a_objmap.py  q6a_vision.py  q6a_voice.py  setup_npu_llm.sh  slam_lifecycle_up.sh  slam_toolbox.yaml
scripts/companion/agent/: agent.py  mcp_robot.py  mcp_websearch.py  q6a-agent-remote
scripts/companion/camera/: build_depth.sh  build_imx296.sh  build_imx296_fdbin.sh  build_yolo.sh  deploy_imx296.sh  depth_bench.py  depth_coexist.py  imx296_fdbin.patch  imx296_wb.npz  q6a_bytetrack.py  q6a_camstream.py  q6a_depth.py  q6a_detector.py  q6a_gpu.py  q6a_v4l2.py  q6a_yolo.py  qcs6490-radxa-dragon-q6a-cam2-imx296.dtbo  qcs6490-radxa-dragon-q6a-cam2-imx296.dts  qcs6490-radxa-dragon-q6a-cam3-imx296.dtbo  qcs6490-radxa-dragon-q6a-cam3-imx296.dts  view_q6a_cam.sh
scripts/companion/camera/models/: yolov8_det_242.dlc  yolov8_det_w8a8_242.dlc
scripts/companion/camera/profiles/: imx296.json
scripts/companion/camera/tuning/: README.md
scripts/companion/diag/: cmdprobe.py  gyro_yaw_check.py  odom_compare.py
scripts/companion/gpu/: setup_gpu_llm.sh
scripts/companion/qnn/: PHASE3.md  README.md  native_gen.py  native_prefill.py  perfpolicy_test.py  qab_smoke.py  qnn_llm.py  qnn_prefill_test.py  setup_qai_appbuilder.sh
scripts/companion/qnn/genie-build/: Genie-CMakeLists-246.txt  Genie-CMakeLists.txt  q6a-llmd-adaptive.conf  threadpool.cpp
scripts/companion/systemd/: audio-bridge.service  ippolit-robot.env  ippolit-voice.env.example  lds-scan-node.service  llama-prewarm.service  mcu-node.service  q6a-announce.service  q6a-brownout.service  q6a-cliff-guard.service  q6a-laser-odom.service  q6a-llmd.service  q6a-map-persist.service  q6a-objmap.service  q6a-slam-toolbox.service  q6a-vision.service  q6a-voice.service  valetudo-bridge.service
scripts/robot/: _root.sh  _root_postboot.sh  audio_bridge.py  build_ava_shims.sh  cam_grab.sh  camsiphon.c  camstream.c  camstream.sh  capture_cleanset.sh  cedar_enc.c  confirm_mcu.py  deploy_ava_shims.sh  fanoff_flag.sh  fanoff_shim.c  h264_headers.py  lds_scan_node.py  mcu_node.py  patch_cleanmode.py  ring_forward.py  rollback.sh  serialtap.c  set_only_mop.py  speak.py  spin_calib.py  usb_ecm_gadget.sh  usb_ncm_gadget.sh  valetudo_bridge.py
