<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ippolit_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files, per-node config YAML, systemd unit templates, and the on-device deploy script — the single place the whole robot is brought up from</description>
  <maintainer email="dmitry.poklonskiy@kingmakers.com">Dmitry Poklonskiy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ippolit_description</exec_depend>
  <exec_depend>ippolit_drivers</exec_depend>
  <exec_depend>ippolit_localization</exec_depend>
  <exec_depend>ippolit_safety</exec_depend>
  <exec_depend>ippolit_control</exec_depend>
  <exec_depend>ippolit_perception</exec_depend>
  <exec_depend>ippolit_navigation</exec_depend>
  <exec_depend>ippolit_teleop</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
