<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ippolit_control</name>
  <version>0.1.0</version>
  <description>cmd_vel to Valetudo REST actuation bridge (the sole AVA motion touchpoint)</description>
  <maintainer email="dmitry.poklonskiy@kingmakers.com">Dmitry Poklonskiy</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
